# linejs

./: GEMINI.md  demo_ipad_login.ts  demo_login.ts  demo_pc_login.ts  receive_messages_ipad.ts  receive_messages_pc.ts  receive_one_message_ipad.ts
.gemini/rules/: decrypt_successfully.md  qrlogin.md
flowchart/: qrlogin.mmd
linejs-rs/: .gitignore  Cargo.toml
linejs-rs/core/: Cargo.toml
linejs-rs/core/src/: device.rs  e2ee.rs  gen.rs  lib.rs  login.rs  main.rs  request.rs  service.rs  storage.rs  thrift.rs
linejs-rs/pwa/: README.md  index.html  manifest.json  server.py  style.css  sw.js
linejs-rs/wasm/: Cargo.toml
linejs-rs/wasm/src/: lib.rs
scripts/thrift/: gen_rust.ts
