[package]
name = "linejs-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
base64 = "0.22"
thiserror = "1.0"
bytes = "1.9"
byteorder = "1.5"
hex = "0.4"
aes = "0.8"
cbc = "0.1"
ecb = "0.1"
rsa = "0.9"
sha2 = "0.10"
rand = "0.8"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
urlencoding = "2.1"
aes-gcm = "0.10"
rpassword = "7.3"

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
tokio = { version = "1", features = ["full"] }

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
