[package]
name = "linejs-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
linejs-core = { path = "../core" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "Window", "Location"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
base64 = "0.22"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
urlencoding = "2.1"
